# fluent-pypro-template

./: .gitignore  Makefile  README.md  cookiecutter.json  cookiecutter_a.json  makefile_b  pyproject.toml  pyproject_bnk.toml  to-do.md
docs/: references.yaml
docs/quickstart/: quickstart.md
hooks/: post_gen_project.py  pre_gen_project.py
src/fluentqatpl/: some_script.py
tests/: test_pre_gen_project.py  test_some_script.py
{{ cookiecutter.project_slug }}/: .gitignore  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
{{ cookiecutter.project_slug }}/_licences/: persona.txt
