[tool.poetry]
name = "fluentqatpl"
version = "0.1.0"
description = "Cookiecutter templates for QA Project"
authors = ["Patrick <fakepatrick@163.com>"]
readme = "README.md"
repository = "https://github.com/qdriven/fluent-pypro-template"
homepage = "https://github.com/qdriven/fluent-pypro-template"
keywords = ["python",
    "cookiecutter",
    "template",
    "packages",
    "makefile",
    "best-practices",
    "poetry",
    "codestyle",
    "formatters",
    "python-packages",
    "semantic-versions",
    "QA",
    "Testing",
    "Tester",
    "fluent-qa"
]

packages = [
    { include = "fluentqatpl", from = "src" },
]
#include = ["CHANGELOG.md"]
#exclude = ["my_package/excluded.py"]
 classifiers = [
     "Topic :: Software Development :: Build Tools",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
cookiecutter = "^2.1.1"
pytest = "^7.1.2"
pytest-cov = "^4.0.0"
deepdiff = "^6.2.3"
pre-commit = "^3.1.1"
httpretty = "^1.1.4"
typing-extensions = "^4.2.0"
zipp = "^3.8.0"
flatdict = "^4.0.1"
Pygments = "^2.12.0"
bandit = "^1.7.4"
coverage = "^6.5.0"
coverage-badge = "^1.1.0"
pytest-html = "^3.1.1"
safety = "^2.1.1"
pylint = "^2.14.5"
black = {version = "^23.1.0", allow-prereleases = true}
darglint = "^1.8.1"
isort = {extras = ["colors"], version = "^5.10.1"}

# [tool.poetry.scripts]
# poetry = "poetry.console.application:main"

# [tool.poetry.build]
# generate-setup-file = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 310
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]

[tool.black]
target-version = ['py310']
line-length = 100
color = true
preview = true
force-exclude = '''
.*/setup\.py$
'''
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.mypy]
python_version = "3.10"
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["{{ cookiecutter.project_name }}", "hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]
[coverage.paths]
source = "hooks"
[coverage.run]
branch = true
[coverage.report]
fail_under = 50
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
